fixed issue with vertical scrollbar

--- a/src/app/layouts/default/default.component.scss
+++ b/src/app/layouts/default/default.component.scss
@@ -1,22 +1,20 @@
 @import "../../../assets/scss/mixins";
 mat-toolbar {
   position: fixed;
-  z-index: 10;
+  top: 0;
+  z-index: 2;
 }
 mat-toolbar,
 mat-toolbar-multiple-rows {
   min-height: 64px !important;
 }
+mat-sidenav {
+  padding-top: 64px;
+  width: 250px;
+}
 mat-sidenav-container {
   height: 100%;
-}
-mat-sidenav-content {
-  margin-top: 64px;
-  padding-bottom: 100px;
-}
-mat-sidenav {
-  width: 250px;
-  margin-top: 64px;
+  padding-top: 64px;
 }
 
 .mat-list-item {
