--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,22 +1,15 @@
 @import "@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import "./grid.scss";
-body,
-html {
+
+html,
+body {
   height: 100%;
 }
+
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-}
-
-.text-center {
-  text-align: center;
-}
-.text-right {
-  text-align: right;
-}
-.text-left {
-  text-align: left;
+  background-color: #fafafa;
 }
 
 .mat-list-item-content {
